--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@
 
 .carousel-control-prev,
 .carousel-control-next {
-    width: 15%;
+    width: 10%;
 }
 
 .carousel-control-prev-icon,
@@ -170,9 +170,10 @@
     width: 3rem;
     height: 3rem;
     background-color: var(--primary);
-    border: 10px solid var(--primary);
-    border-radius: 3rem;
+    border-radius: 50%;
+    background-size: 60% 60%;
 }
+
 
 @media (max-width: 768px) {
     #header-carousel .carousel-item {
